fixed position of footer so it doesn't overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,9 @@
  *= require_tree .
  *= require_self
  */
+
+
+ .footer {
+ 	padding-top: 8em;
+ 	padding-bottom: 4em;
+ }
